Fix wallet transactions, trading flow, and CoinGecko integration